Bunch of changes, backend running again, figuring out docs
